fixing responsif design issue on small screen size

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  width: 100vw;
   box-sizing: border-box;
   background-color: var(--Yellow);
   font-family: Figtree;
@@ -39,6 +40,8 @@ body {
 }
 
 .main-container {
+  box-sizing: border-box;
+  flex-shrink: 1;
   width: 384px;
   height: 522px;
   background-color: white;
@@ -91,7 +94,7 @@ img {
   color: var(--ligth-grey);
   font-size: var(--text-preset-2-size);
   font-weight: var(--text-preset-2-weight);
-  width: 320px;
+
 }
 
 .profile-container {
@@ -113,4 +116,26 @@ img {
   color: var(--dark-grey);
   font-size: var(--text-preset-4-size);
   font-weight: var(--text-preset-4-weight);
+}
+
+
+@media (max-width: 500px) {
+  .main-container {
+    width: 327px;
+    height: 501px;
+    font-size: 1;
+  }
+  .status-box{
+    font-size: 12px;
+  }
+  .date{
+    font-size: 12px;
+  }
+  .card-tittle{
+    font-size: 20px;
+  }
+  .describtion{
+    font-size: 14px;
+    font-weight: 500;
+  }
 }
